[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Up-Arrow/key-board-arrow.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/slimeBlue1.png" type="Texture" id=2]
[ext_resource path="res://Main-Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/player/platformChar_idle.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/CrimsonText-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/Pixel-Font.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Main-Menu-Font.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/soundsandmusic/music/Swinging Pants.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 140
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0705882, 0.0588235, 0.0588235, 0.537255 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 55
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 6 )

[node name="Main-Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.360784, 0.0823529, 0.513726, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.23
anchor_top = 0.015
anchor_right = 0.723
anchor_bottom = 0.24
margin_left = 0.600006
margin_top = 0.2
margin_right = -0.440063
margin_bottom = 0.199997
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Jump, Race, Kill!"

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.01
anchor_top = 0.504
anchor_right = 0.272
anchor_bottom = 0.993
margin_left = 1.2
margin_top = 0.119995
margin_right = -0.160034
margin_bottom = 0.0400391
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 13.0
margin_right = 138.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 3 )
text = "Jump:

Left and Right:

Player:

Enemy:

Collect 16 coins to win!"

[node name="Up" type="TextureRect" parent="Panel"]
margin_left = 98.0
margin_top = 8.0
margin_right = 138.0
margin_bottom = 48.0
texture = ExtResource( 1 )
expand = true

[node name="Left" type="TextureRect" parent="Panel"]
margin_left = 168.0
margin_top = 110.0
margin_right = 208.0
margin_bottom = 150.0
rect_rotation = 270.0
texture = ExtResource( 1 )
expand = true

[node name="Right" type="TextureRect" parent="Panel"]
margin_left = 264.0
margin_top = 70.0
margin_right = 304.0
margin_bottom = 110.0
rect_rotation = 90.0
texture = ExtResource( 1 )
expand = true

[node name="Player" type="TextureRect" parent="Panel"]
margin_left = 79.0
margin_top = 122.0
margin_right = 128.0
margin_bottom = 176.0
texture = ExtResource( 4 )
expand = true

[node name="Enemy" type="TextureRect" parent="Panel"]
margin_left = 90.0
margin_top = 204.0
margin_right = 134.0
margin_bottom = 235.0
texture = ExtResource( 2 )
expand = true

[node name="Levels" type="Button" parent="."]
anchor_left = 0.465
anchor_top = 0.42
anchor_right = 0.865
anchor_bottom = 0.52
margin_left = 9.80005
margin_top = 1.60001
margin_right = 10.2
margin_bottom = 1.60001
custom_fonts/font = SubResource( 4 )
text = "Play!"
flat = true

[node name="howtoplay" type="Button" parent="."]
anchor_left = 0.469
anchor_top = 0.61
anchor_right = 0.869
anchor_bottom = 0.71
margin_left = -0.256012
margin_right = 0.143921
custom_fonts/font = SubResource( 4 )
text = "How To Play"
flat = true

[node name="exit" type="Button" parent="."]
visible = false
anchor_left = 0.608
anchor_top = 0.768
anchor_right = 0.716
anchor_bottom = 0.872
margin_left = 0.407959
margin_top = 0.199982
margin_right = -0.184021
margin_bottom = -0.200012
custom_fonts/font = SubResource( 5 )
disabled = true
text = "Exit"
flat = true

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="pressed" from="Levels" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="howtoplay" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
